--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,9 @@
                 <svg class="w-4 h-4 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
                 </svg>
+                <a *ngIf="latest_news?.author?.id" [routerLink]="['/author', latest_news?.author?.id]" class="block">
                 <span>By <a>{{ latest_news?.author?.name || 'Admin' }}</a></span>
+                </a>
               </div>
 
               <div class="flex items-center space-x-2">
@@ -224,7 +226,9 @@
                 </h3>
                 <p class="text-gray-600 mb-4">{{getPlainText(section?.mainNews?.content)}}</p>
                 <div class="flex justify-between items-center text-sm text-gray-500">
+                  <a *ngIf="section?.mainNews?.author?.id" [routerLink]="['/author', section?.mainNews?.author?.id]" class="block">
                   <span>By {{ section?.mainNews?.author?.name }}</span>
+                  </a>
                   <span>4 hours ago</span>
                 </div>
               </div>
