--- a/src/app/news-detail/news-detail.component.html
+++ b/src/app/news-detail/news-detail.component.html
@@ -5,8 +5,8 @@
       <nav class="flex py-4 text-sm text-gray-500">
         <a routerLink="/" class="hover:text-red-600 transition">Home</a>
         <span class="mx-2">/</span>
-        <a [routerLink]="['/category', news?.category?.toLowerCase()]" class="hover:text-red-600 transition capitalize">
-          {{ news?.category }}
+        <a [routerLink]="['/category', news?.categories[0]?.slug]" class="hover:text-red-600 transition capitalize">
+          {{ news?.categories[0]?.name }}
         </a>
         <span class="mx-2">/</span>
         <span class="text-gray-700 truncate">{{ news?.title }}</span>
@@ -214,33 +214,32 @@
 
       <!-- Sidebar -->
       <div class="lg:col-span-1">
-        <!-- Related News -->
         <div class="bg-white rounded-xl shadow-sm border border-gray-100 p-6 mb-2">
+          <h3 class="text-xl font-bold text-gray-800 mb-4 pb-2 border-b-2 border-red-600 inline-block">
+            Author
+          </h3>
           <div class="flex items-start space-x-4">
             <!-- Author Avatar -->
             <div class="relative">
-              <div *ngIf="news?.author?.profileImageUrl;"
-                   class="w-16 h-16 rounded-full flex items-center justify-center flex-shrink-0 overflow-hidden border-2 border-gray-200">
-                <img [src]="news.author.profileImageUrl"
-                     [alt]="news.author.name"
-                     class="w-full h-full object-cover">
-              </div>
-              <!--              <ng-template #initialsAvatar>  else initialsAvatar-->
-              <!--                <div [class]="'w-16 h-16 rounded-full flex items-center justify-center flex-shrink-0 border-2 ' + getAuthorAvatarClass(news?.author?.name)">-->
-              <!--          <span [class]="'font-bold text-xl ' + getAuthorTextClass(news?.author?.name)">-->
-              <!--            {{ getAuthorInitials(news?.author?.name) }}-->
-              <!--          </span>-->
-              <!--                </div>-->
-              <!--              </ng-template>-->
+              <a *ngIf="news?.author?.id" [routerLink]="['/author', news?.author?.id]" class="block">
+                <div *ngIf="news?.author?.profileImageUrl"
+                     class="w-16 h-16 rounded-full flex items-center justify-center flex-shrink-0 overflow-hidden border-2 border-gray-200 hover:scale-105 transition-transform">
+                  <img [src]="news?.author?.profileImageUrl"
+                       [alt]="news?.author?.name"
+                       class="w-full h-full object-cover">
+                </div>
+              </a>
             </div>
-
             <div>
-              <h3 class="text-xl font-bold text-gray-800">{{ news?.author?.name || 'News Desk' }}</h3>
+              <a *ngIf="news?.author?.id" [routerLink]="['/author', news?.author?.id]" class="block">
+                <h3 class="text-xl font-bold text-gray-800">{{ news?.author?.name || 'News Desk' }}</h3>
+              </a>
               <p class="text-red-600 font-medium mb-2">{{ news?.author?.designation || 'Senior Correspondent' }}</p>
               <p class="text-gray-600" [innerHTML]="news?.author?.description | slice:0:150">
                 <!--                {{ news?.author?.bio || getDefaultBio(news?.author?.name, news?.category) }}-->
               </p>
             </div>
+
           </div>
         </div>
         <div class="bg-white rounded-xl shadow-sm border border-gray-100 p-6 mb-2">
