--- a/src/app/category-section/category-section.component.html
+++ b/src/app/category-section/category-section.component.html
@@ -6,8 +6,8 @@
     <div class="mb-8">
       <nav class="flex items-center space-x-2 text-sm text-gray-500 mb-4">
         <a routerLink="/" class="hover:text-gray-700">Home</a>
-        <span>/</span>
-        <a routerLink="/news" class="hover:text-gray-700">News</a>
+<!--        <span>/</span>-->
+<!--        <a routerLink="/{{categorySlug}}" class="hover:text-gray-700">{{ categoryName }}</a>-->
         <span>/</span>
         <span class="text-gray-900 font-medium">{{ categoryName }}</span>
       </nav>
