--- a/src/app/news-detail/news-detail.component.html
+++ b/src/app/news-detail/news-detail.component.html
@@ -169,7 +169,7 @@
                 <a *ngFor="let tag of news?.tags"
                    href="#"
                    class="px-3 py-1 bg-gray-100 text-gray-700 rounded-full text-sm hover:bg-red-100 hover:text-red-700 transition">
-                  #{{ tag }}
+                  #{{ tag?.name }}
                 </a>
               </div>
             </div>
